--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==1.11.24
 dnspython==1.16.0
 Flask==1.1.1
 Flask-PyMongo==2.3.0
+gunicorn==19.9.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
